--- a/style.css
+++ b/style.css
@@ -115,5 +115,21 @@ footer {
 /* スマホ
 -------------------------------------*/
 @media (max-width: 600px) {
-    
+    .page-header {
+        flex-direction: column;
+        align-items: center;
+        height: 150px;
+    }
+    header h1 {
+        flex-direction: column;
+        font-size: 1.75rem;
+    }
+
+    .old-nav {
+        font-size: 0.5rem;
+    }
+    .profile {
+        flex-direction: column;
+        align-items: center;
+    }
 }
