--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ footer {
         text-align: center;
         line-height: 1.4;
         margin-top: 10px;
+        margin-left: 0;
     }
 
     .main-nav {
