--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 
 body {
     font-family: "Yu Gothic Medium", "游ゴシック Medium", YuGothic,"游ゴシック体", "ヒラギノ角ゴ pro W3", sans-serif;
-    line-height: 2;
+    line-height: 1.7;
     color: #432;
     background-color: rgb(223, 255, 254);
 }
@@ -16,7 +16,7 @@ header {
     display: flex;
     justify-content: space-between;
     background-color: #0093d0;
-    height: 115px;
+    height: 100%;
 }
 .wrapper {
     max-width: 1000px;
@@ -25,6 +25,7 @@ header {
 }
 header h1 {
     color: rgb(255, 255, 255);
+    padding: 10px 0;
     margin-left: 18px;
 }
 header p {
@@ -33,19 +34,21 @@ header p {
     font-size: 22px;
     text-align: center;
 }
-
+header li {
+    vertical-align: middle;
+}
 .main-nav {
     display: flex;
     font-size: 1.25rem;
     text-transform: uppercase;
-    margin-top: 34px;
+    margin: 20px 30px;
     list-style: none;
 }
 .main-nav li {
     margin-left: 36px;
 }
 .main-nav a {
-    color: aliceblue;
+    color: rgba(0, 0, 0, 0.398);
 }
 .main-nav a:hover {
     color: rgb(0, 0, 255);
@@ -53,6 +56,7 @@ header p {
 
 /* メイン
 ------------------------------------ */
+
 
 img {
     width: 400;
@@ -67,6 +71,8 @@ h2 {
     padding: 0 10px;
     margin: 30px 20px;
 }
+
+/* PROFILE */
 .profile {
     display: flex;
 }
@@ -83,7 +89,6 @@ h2 {
     color: red;
     font-size: 25px;
     margin: 10px 0;
-    padding: 0;
 }
 p {
     padding: 5px 20px;
@@ -99,7 +104,6 @@ h3 {
     color: red;
     margin: 30px 20px;
 }
-
 /* フッター
 ------------------------------------ */
 footer {
@@ -113,11 +117,10 @@ footer {
 /* モバイル版
 -------------------------------------*/
 @media (max-width: 600px) {
-
     /* HEADER */
     header {
-        width: 100;
-        height: 100%;
+        width: auto;
+        height: auto;
     }
     .page-header {
         flex-direction: column;
@@ -125,7 +128,6 @@ footer {
     }
     header h1 {
         text-align: center;
-        line-height: 1.4;
         margin-top: 10px;
         margin-left: 0;
     }
@@ -137,6 +139,7 @@ footer {
     }
 
     .main-nav li {
+        text-align: center;
         margin: 0 10px;
     }
 
@@ -156,6 +159,7 @@ footer {
     }
     img {
         text-align: center;
+        object-fit: cover;
         width: 90%;
         height: 90%;
     }
@@ -165,5 +169,11 @@ footer {
     }
     p {
         padding: 0;
+    }
+    #home ul {
+        justify-content: space-between;
+        align-items: center;
+        margin-left: 80px;
+        margin-right: 80px;
     }
 }
