--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
     color: #432;
     background-color: rgb(223, 255, 254);
 }
+
+
 /* ヘッダー
 ------------------------------------ */
 header {
@@ -38,8 +40,8 @@ header p {
     display: flex;
     font-size: 1.25rem;
     text-transform: uppercase;
-    margin: 20px 30px;
     list-style: none;
+    padding: 47.5px 0;
 }
 .main-nav li {
     margin-left: 36px;
@@ -53,13 +55,15 @@ header p {
 
 /* メイン
 ------------------------------------ */
-
+.center {
+    text-align: center;
+}
 
 img {
-    width: 400;
+    width: 400px;
     height: 300px;
-    object-fit: cover;
-    margin: 50px 20px;
+    margin: 50px 0;
+    vertical-align: bottom;
 }
 
 h2 {
@@ -87,21 +91,24 @@ h2 {
     font-size: 25px;
     margin: 10px 0;
 }
+
+/* 共通部分 */
 p {
     padding: 5px 20px;
 }
+h3 {
+    color: red;
+    margin: 30px 20px;
+}
 
+/* プロローグ */
 .prologue p {
     font-size: 20px;
     color: #f37053;
     margin: 30px 0;
 }
 
-h3 {
-    color: red;
-    margin: 30px 20px;
-}
-
+/* アンダーバー */
 .under-nav {
     display: flex;
     font-size: 1.25rem;
@@ -118,6 +125,8 @@ h3 {
 .under-nav a:hover {
     color: rgb(0, 0, 255);
 }
+
+
 /* フッター
 ------------------------------------ */
 footer {
@@ -131,6 +140,7 @@ footer {
 /* モバイル版
 -------------------------------------*/
 @media (max-width: 600px) {
+
     /* HEADER */
     header {
         width: auto;
@@ -142,13 +152,14 @@ footer {
     }
     header h1 {
         text-align: center;
-        margin-top: 10px;
         margin-left: 0;
     }
-
+    
+    /* NAV */
     .main-nav {
-        font-size: 60%;
-        margin: 10px 0;
+        font-size: 70%;
+        padding: 0;
+        margin-bottom: 10px;
     }
 
     .main-nav li {
@@ -161,28 +172,26 @@ footer {
         flex-direction: column;
         align-items: center;
     }
-    .profile img {
-        text-align: center;
-    }
     .profile ul {
         margin: 0;
     }
     .profile p {
         margin: 0;
     }
+
+    /* 共通部分 */
     img {
-        text-align: center;
-        object-fit: cover;
         width: 90%;
         height: 90%;
     }
     h2 {
-        padding-left: 10px;
         margin: 10px 0;
     }
     p {
         padding: 0;
     }
+
+    /* 各WRAPPER */
     .birth {
         margin-top: 30px;
     }
@@ -192,8 +201,9 @@ footer {
     .light {
         margin-top: 30px;
     }
+    
     .under-nav {
-        font-size: 60%;
+        font-size: 70%;
         margin: 10px 50px;
         justify-content: space-between;
     }
