--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 /* ヘッダー
 ------------------------------------ */
 header {
+    background-image: url();
     display: flex;
     justify-content: space-between;
     background-color: #0093d0;
