--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 /* ヘッダー
 ------------------------------------ */
 header {
-    background-image: url();
+    background-image: url(https://github.com/ak-no-lis/profile_page/blob/main/DSC_0089.JPG?raw=true);
     display: flex;
     justify-content: space-between;
     background-color: #0093d0;
